# gnome-io

./: Cargo.toml  DESIGN.md  ICEBOX.md  README.md  ROADMAP.md
assets/: gnome-pallet.aseprite  gnomes.xcf  tileset.aseprite  tileset.xcf  tileset_new.aseprite
assets/data/: blocks.ron  items.ron  tileset.ron
src/: block.rs  context.rs  debug_console.rs  draw.rs  entity.rs  event.rs  game.rs  gameplay.rs  gnome.rs  grid.rs  item.rs  job.rs  main.rs  text.rs  tile.rs  tileset.rs  toolbar.rs  ui.rs
src/block/: blocks.rs
src/entity/: gnome.rs  goblin.rs
src/event/: raid.rs  snow.rs
src/game/: debug.rs  generate.rs  time.rs
src/grid/: path.rs  pos.rs  stocks.rs
src/item/: items.rs
src/job/: build.rs  craft.rs  farm.rs  fight.rs  mine.rs  store.rs
src/ui/: labor.rs  menu.rs  skin.rs  toolbar.rs
