[package]
name = "gnome-io"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
log = "0.4.27"
macroquad = "0.4.14"
nanoserde = "0.2.1"
noise = "0.9.0"
pathfinding = "4.14.0"
quad-lib = {path = "quad-lib"}
ron = "0.10.1"
serde = { version = "1.0.216", features = ["derive"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package.'*']
opt-level = 3
